--- a/src/lib/style.css
+++ b/src/lib/style.css
@@ -1,14 +1,299 @@
-<style>
+body,html {
+    margin: 0;
+    padding:0;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
 
-h2 {
- color: red;
- font-size: 20px;
- font-weight: bold;
+body {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  overflow-x: hidden;
+  background-color: #ffebeb;
 }
 
-p {
- font-family: times;
- font-size: 12px;
+.menu {
+  margin: 0 auto;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  position: -webkit-sticky;
+  position: fixed;
+  top: 0;
+  left: 0;
+  align-self: flex-start;
+  align-items: center;
+  justify-content: center;
+  background-color: #ff8787;
+  text-align: center;
+  width: 100%;
+  height: 15%;
+  flex-wrap: nowrap;
+  border-bottom: solid;
 }
 
-</style>
+.menu_lista {
+    list-style: none;
+}
+
+.menu__item {
+  font-weight: bold;
+  padding: 1em;
+  flex-grow: 1;
+  text-align: center;
+  float: left;
+}
+
+.menu__item a {
+  float: right;
+  display: block;
+  text-align: center;
+  color: #841a1a;
+  text-decoration: none;
+  margin-left: 0.5em;
+  font-size: 1.5em;
+}
+
+.menu__item i {
+  color: #841a1a;
+  text-decoration: none;
+  margin-left: 1em;
+  font-size: 1.5em;
+}
+
+.menu__item:hover > a {
+  text-decoration: underline;
+  color: #000;
+}
+
+.menu__item:hover > i {
+  color: #000;
+}
+
+.contenido {
+  margin-top: 9em;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 80%;
+}
+
+.contenedor1 {
+  display: block;
+  width: 100%;
+}
+
+.fotoPersonal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+}
+
+.fotoJuanes {
+  width: 20em;
+  border-radius: 50%;
+  display: block;
+  margin: auto;
+  border-style: solid;
+}
+
+.titulo {
+    text-align: center;
+    color: #841a1a;
+    display:block;
+    width: 100%;
+    font-size: 3em;
+}
+
+.contenedor2 {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  min-height: 30%;
+}
+
+.presentacion {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    min-height: 30%;
+    margin: 0 2em;
+  }
+
+.caja1 {
+  background-color: #e1c1c1;
+  margin: 1em;
+  text-align: center;
+  flex-grow: 1;
+  font-size: 20px;
+  display: inline-block;
+  border-radius: 10%;
+  padding: 1em;
+}
+
+.contenedor3 {
+  display: block;
+  padding: 2em;
+  width: 100%;
+}
+
+.mi_proposito {
+  display: block;
+  width: 100%;
+  color: #841a1a;
+  font-size: 2em;
+  margin-left: 1.5em;
+}
+
+.proposito {
+    display: block;
+    width: 100%;
+  }
+
+.caja2 {
+  background-color: #e1c1c1;
+  margin: 1em;
+  text-align: center;
+  flex-grow: 1;
+  font-size: 20px;
+  display: inline-block;
+  border-radius: 5%;
+  padding: 1em;
+}
+
+.redes {
+  background-color: #ffb9b9;
+  border-top: solid;
+  border-top-width: .01em;
+  width: 100%;
+  padding: 0 3em;
+  display: flex;
+  justify-content: end;
+  margin-top: 4em;
+}
+
+.redes_lista {
+  list-style: none;
+}
+
+.redes__item {
+font-weight: bold;
+padding: 3em;
+flex-grow: 1;
+text-align: center;
+float: left;
+}
+
+.redes__item a {
+float: right;
+display: block;
+text-align: center;
+color: #841a1a;
+text-decoration: none;
+margin-left: 0.3em;
+font-size: 0.8em;
+}
+
+.redes__item i {
+color: #841a1a;
+text-decoration: none;
+margin-left: 1em;
+font-size: 1.4em;
+}
+
+.redes__item:hover > a {
+text-decoration: underline;
+color: #000;
+}
+
+.redes__item:hover > i {
+  color: #000;
+}
+
+.contenedor1_2 {
+  display: block;
+  width: 100%;
+}
+
+.tituloContacto {
+  text-align: left;
+  color: #841a1a;
+  display:block;
+  width: 100%;
+  font-size: 2.5em;
+  margin-bottom: -0.2em;
+}
+
+.fotoPersonal {
+  display: flex;
+  justify-content: left;
+  width: 100%;
+  margin-top: 3em;
+}
+
+.fotoContacto {
+width: 15em;
+border-radius: 50%;
+display: block;
+border-style: solid;
+}
+
+.contenedorContacto {
+  width: 100%;
+  display: block;
+}
+
+.contacto__item {
+padding: 1em;
+text-align: left;
+}
+
+.contenedorFormulario {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  min-height: 30%;
+}
+
+.formulario {
+  display: block;
+  width: 100%;
+  min-height: 30%;
+  margin: 0 1em;
+  margin-top: 2em;
+}
+
+input {
+  width: 40%;
+  border: none;
+  border-bottom: 3px solid;
+  background: transparent;
+  color: #e60000;
+
+}
+
+input:focus {
+  background: linear-gradient(to bottom, transparent, #ffbfbf);
+  outline: none;
+  border-bottom: 3px solid #ff6565;
+}
+
+textarea {
+  min-height: 140px;
+  min-width: 70%;
+  resize: none;
+  background-color: #ffd8d8;
+}
+
+.enviar {
+  background-color: #d05a5a;
+  color: #710202;
+  width: 20%;
+  padding: 0.5em;
+  margin-top: 1em;
+  border: solid;
+}
